# stackelberg-opt

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/architecture/: README.md  api-design.md  components.md  data-flow.md  extension-guide.md  overview.md
notebooks/: 01_getting_started.ipynb  02_multi_hop_qa_example.ipynb  03_advanced_features.ipynb  README.md
stackelberg_opt/components/: constraints.py  dependencies.py  equilibrium.py  evaluator.py  feedback.py  mutator.py  population.py  stability.py
stackelberg_opt/core/: candidate.py  module.py
stackelberg_opt/examples/: multi_hop_qa.py  simple_optimization.py
stackelberg_opt/utils/: cache.py  checkpoint.py  visualization.py
tests/: README.md  TEST_RESULTS.md  TEST_STRUCTURE.md  TEST_SUMMARY.md  conftest.py  quick_test.py  run_all_tests.py  run_all_tests.sh  run_tests.py  test_basic.py  test_components.py  test_integration.py  test_no_deps.py  test_optimizer.py  test_structure.py  test_utils.py  test_with_mocks.py
